- Update Tree menu and ToC items alignment - Fix email input mobile width

--- a/sass/input-register.scss
+++ b/sass/input-register.scss
@@ -32,7 +32,7 @@ $common-desktop-width: 155px;
   line-height: normal;
 
   @include phone-down {
-    width: auto;
+    width: 100%;
   }
 }
 
