--- a/sass/table-of-contents.scss
+++ b/sass/table-of-contents.scss
@@ -25,11 +25,11 @@
     list-style-type: none;
 
     .table-of-contents-list-item {
-      padding: 0px 8px 0px 8px;
-      line-height: 1.75rem;
+      padding: 0px 8px 7px 8px;
+      line-height: 1.3;
 
       &.table-of-contents-list-item__sub {
-        padding-left: 18px;
+        padding-left: 16px;
       }
 
       a {
