--- a/sass/tree-menu.scss
+++ b/sass/tree-menu.scss
@@ -39,8 +39,8 @@
     list-style-type: none;
 
     .tree-menu__section-item {
-      margin-bottom: 6px;
-      line-height: 1.1;
+      margin-bottom: 7px;
+      line-height: 1.3;
 
       a {
         color: #4f4f4f;
